# agentmail-python

./: .fernignore  README.md  agent.py  client.py  default.nix  flake.nix  hello.py  pyproject.toml  reference.md  test.py
.fern/: metadata.json
models/: __init__.py  email.py  error.py  inbox.py
src/agent_mail/: __init__.py  client.py  environment.py
src/agent_mail/core/: client_wrapper.py
src/agent_mail/inboxes/: client.py
src/agent_mail/messages/: client.py
src/agent_mail/threads/: client.py
src/agent_mail/types/: __init__.py
src/agentmail/: __init__.py  client.py  environment.py
src/agentmail/agent/: __init__.py  client.py  raw_client.py
src/agentmail/api_keys/: __init__.py  client.py  raw_client.py
src/agentmail/attachments/: __init__.py
src/agentmail/core/: client_wrapper.py
src/agentmail/domains/: __init__.py  client.py  raw_client.py
src/agentmail/drafts/: __init__.py  client.py  raw_client.py
src/agentmail/errors/: __init__.py  unprocessable_error.py
src/agentmail/events/: __init__.py
src/agentmail/inbox_events/: __init__.py
src/agentmail/inboxes/: __init__.py  client.py  raw_client.py
src/agentmail/lists/: client.py  raw_client.py
src/agentmail/messages/: __init__.py  client.py  raw_client.py
src/agentmail/metrics/: __init__.py  client.py  raw_client.py
src/agentmail/organizations/: client.py  raw_client.py
src/agentmail/threads/: __init__.py  client.py  raw_client.py
src/agentmail/types/: __init__.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+89 files in other folders)
